-- update with functioning version for pan tilt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -120,7 +120,7 @@ catkin_package(
 ## Specify additional locations of header files
 ## Your package locations should be listed before other locations
 include_directories(
-# include
+  include
   ${catkin_INCLUDE_DIRS}
 )
 
@@ -138,7 +138,10 @@ include_directories(
 ## With catkin_make all packages are built within a single CMake context
 ## The recommended prefix ensures that target names across packages don't collide
 add_executable(${PROJECT_NAME}_node src/thi_pan_tilt_unit_node.cpp)
-add_executable(joy2pantilt_node src/joy2pantilt_node.cpp)
+add_executable(joy2pantilt_node     src/joy2pantilt_node.cpp)
+add_executable(pantilt_node         src/thi_pan_tilt_node.cpp
+                                    src/PanTiltUnit.cpp)
+
 
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
@@ -156,6 +159,10 @@ target_link_libraries(${PROJECT_NAME}_node
 )
 
 target_link_libraries(joy2pantilt_node
+  ${catkin_LIBRARIES}
+)
+
+target_link_libraries(pantilt_node
   ${catkin_LIBRARIES}
 )
 
